--- a/FrontEnd/frontend/src/Account.css
+++ b/FrontEnd/frontend/src/Account.css
@@ -2,6 +2,10 @@
     text-align: center;
 }
 
+.LoginTitle{
+    text-align: center;
+}
+
 .email{
     text-align: center;
     margin-bottom: 20px;
