--- a/FrontEnd/frontend/src/App.css
+++ b/FrontEnd/frontend/src/App.css
@@ -36,3 +36,18 @@
     transform: rotate(360deg);
   }
 }
+
+.homeTitle{
+  text-align: center;
+}
+
+.buttonLogin{
+  text-align: right;
+}
+
+.login{
+  border-radius: 50px;
+  width: 50px;
+  height: 20px;
+  margin-right: 20px;
+}
