--- a/FrontEnd/frontend/src/App.css
+++ b/FrontEnd/frontend/src/App.css
@@ -55,3 +55,13 @@
 .button{
   margin-bottom: 20px;
 }
+
+.cardBox{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.images{
+  border: solid 5px white;
+}
