--- a/FrontEnd/frontend/src/App.css
+++ b/FrontEnd/frontend/src/App.css
@@ -57,9 +57,12 @@
 }
 
 .cardBox{
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(auto-fill,minmax(260px, 1fr));
+  /* display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  flex-direction:row;
+  justify-content: space-between; */
 }
 
 .images{
